--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.animation.rigging": "1.0.3",
     "com.unity.cinemachine": "2.6.17",
